--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'maven-publish'
+    id 'com.jfrog.bintray' version '1.8.4'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
@@ -65,5 +66,22 @@ publishing {
                 }
             }
         }
+    }
+}
+
+bintray {
+    user = project.findProperty('bintray.user') ?: System.getenv('BINTRAY_USER')
+    key = project.findProperty('bintray.apikey') ?: System.getenv('BINTRAY_APIKEY')
+    publications = ['maven']
+    pkg {
+        repo = 'maven'
+        name = project.name
+        desc = project.description
+        websiteUrl = 'https://github.com/sukhinin/simple-config'
+        issueTrackerUrl = 'https://github.com/sukhinin/simple-config/issues'
+        vcsUrl = 'https://github.com/sukhinin/simple-config.git'
+        licenses = ['Apache-2.0']
+        labels = ['simple', 'kotlin', 'config']
+        githubRepo = 'sukhinin/simple-config'
     }
 }
