--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id 'maven-publish'
     id 'com.jfrog.bintray' version '1.8.4'
+    id 'fr.brouillard.oss.gradle.jgitver' version '0.6.1'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'com.github.sukhinin'
-version '1.0-SNAPSHOT'
 description 'Yet another configuration library for Kotlin'
 
 repositories {
@@ -36,6 +36,11 @@ compileTestKotlin {
 
 test {
     useJUnitPlatform()
+}
+
+jgitver {
+    useDirty true
+    useGitCommitID true
 }
 
 publishing {
