--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'maven-publish'
-    id 'com.jfrog.bintray' version '1.8.4'
     id 'fr.brouillard.oss.gradle.jgitver' version '0.6.1'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
@@ -9,8 +8,10 @@ group 'com.github.sukhinin'
 description 'Yet another configuration library for Kotlin'
 
 repositories {
-    jcenter()
     mavenCentral()
+    maven {
+        url 'https://maven.pkg.github.com/sukhinin'
+    }
 }
 
 dependencies {
@@ -37,54 +38,23 @@ test {
 }
 
 jgitver {
-    useDirty true
-    useGitCommitID true
+    strategy 'MAVEN'
 }
 
 publishing {
-    publications {
-        maven(MavenPublication) {
-            from components.java
-            artifact(kotlinSourcesJar)
-            pom {
-                name = project.name
-                description = project.description
-                url = 'https://github.com/sukhinin/simple-config'
-                licenses {
-                    license {
-                        name = 'Apache-2.0'
-                        url = 'https://github.com/sukhinin/simple-config/blob/master/LICENSE'
-                    }
-                }
-                developers {
-                    developer {
-                        id = 'sukhinin'
-                        name = 'Boris Sukhinin'
-                    }
-                }
-                scm {
-                    connection = 'scm:git:https://github.com/sukhinin/simple-config.git'
-                    developerConnection = 'scm:git:https://github.com/sukhinin/simple-config.git'
-                    url = 'https://github.com/sukhinin/simple-config'
-                }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/sukhinin/simple-config")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USERNAME")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
             }
         }
     }
-}
-
-bintray {
-    user = project.findProperty('bintray.user') ?: System.getenv('BINTRAY_USER')
-    key = project.findProperty('bintray.apikey') ?: System.getenv('BINTRAY_APIKEY')
-    publications = ['maven']
-    pkg {
-        repo = 'maven'
-        name = project.name
-        desc = project.description
-        websiteUrl = 'https://github.com/sukhinin/simple-config'
-        issueTrackerUrl = 'https://github.com/sukhinin/simple-config/issues'
-        vcsUrl = 'https://github.com/sukhinin/simple-config.git'
-        licenses = ['Apache-2.0']
-        labels = ['simple', 'kotlin', 'config']
-        githubRepo = 'sukhinin/simple-config'
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
     }
 }
