--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,7 @@ description 'Yet another configuration library for Kotlin'
 
 repositories {
     mavenCentral()
-    maven {
-        url 'https://jitpack.io'
-    }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -27,6 +25,7 @@ compileKotlin {
         jvmTarget = '1.8'
     }
 }
+
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = '1.8'
@@ -39,4 +38,12 @@ test {
 
 jgitver {
     strategy 'MAVEN'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
